# special_vuz

./: Makefile  README.md
backend/: .env.development  Makefile  pyproject.toml
backend/src/: main.py
backend/src/api/routers/: users.py
backend/src/api/views/: get_user.py
backend/src/core/: settings.py
backend/src/core/model/: base.py  engins.py  users.py
backend/src/core/shemas/: users.py
frontend/: pyproject.toml
