[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nerush Kirill (home) <nerush.kirill@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
sqlalchemy = "^2.0.22"
uvicorn = "^0.23.2"
alembic = "^1.12.1"
pydantic-settings = "^2.0.3"
psycopg2 = "^2.9.9"
asyncpg = "^0.28.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
coverage = "^7.3.2"
bandit = "^1.7.5"
black = "^23.10.1"
mypy = "^1.6.1"
pylint = "^3.0.2"
ruff = "^0.1.3"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
